--- a/src/layout/card-job-tag.html
+++ b/src/layout/card-job-tag.html
@@ -2,230 +2,230 @@
 
 <div class="jobTag-section">
     <div class="card-jobTag">
-        <h4>水電工程師(台北市、新北市)</h4>
+        <h4><a href="">水電工程師(台北市、新北市)</a></h4>
         <div class="content-section">
             <div class="card-content">
                 <div class="job-title">
                     <img src="assets/img/job-card-cover.png" alt="">
-                    <p>隆通工程有限公司</p>
+                    <p><a href="company-story.html">隆通工程有限公司</a></p>
                 </div>
                 <div class="job-content">
                     <ul>
-                        <li>
+                        <a href="">
                             <img src="assets/img/job-card-icon01.png" alt="">
                             <p>台北市南港區</p>
-                        </li>
-                        <li>
+                        </a>
+                        <a href="">
                             <img src="assets/img/job-card-icon02.png" alt="">
                             <p>月薪 33,000~43,000元</p>
-                        </li>
+                        </a>
                     </ul>
                 </div>
                 <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
                 <div class="job-tag"> 
-                    <p class="tag">勞保</p>
-                    <p class="tag">健保</p>
-                    <p class="tag">需穿著員工制服</p>
-                    <p class="tag">需穿著員工制服</p>
-                    <p class="tag">員工生日禮金</p>
-                    <p class="tag">年終獎金</p>
-                    <p class="tag">員工在職教育訓練</p>
+                    <a href="" class="tag">勞保</a>
+                    <a href="" class="tag">健保</a>
+                    <a href="" class="tag">需穿著員工制服</a>
+                    <a href="" class="tag">需穿著員工制服</a>
+                    <a href="" class="tag">員工生日禮金</a>
+                    <a href="" class="tag">年終獎金</a>
+                    <a href="" class="tag">員工在職教育訓練</a>
                 </div>
             </div>
             <div class="card-btn">
-                <button class="btn">
+                <a href="" class="btn">
                     我要應徵
-                </button>
+                </a>
             </div>
         </div>
     </div>
     <div class="card-jobTag">
-        <h4>水電工程師(台北市、新北市)</h4>
+        <h4><a href="">水電工程師(台北市、新北市)</a></h4>
         <div class="content-section">
             <div class="card-content">
                 <div class="job-title">
                     <img src="assets/img/job-card-cover.png" alt="">
-                    <p>隆通工程有限公司</p>
+                    <p><a href="company-story.html">隆通工程有限公司</a></p>
                 </div>
                 <div class="job-content">
                     <ul>
-                        <li>
+                        <a href="">
                             <img src="assets/img/job-card-icon01.png" alt="">
                             <p>台北市南港區</p>
-                        </li>
-                        <li>
+                        </a>
+                        <a href="">
                             <img src="assets/img/job-card-icon02.png" alt="">
                             <p>月薪 33,000~43,000元</p>
-                        </li>
+                        </a>
                     </ul>
                 </div>
                 <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
                 <div class="job-tag"> 
-                    <p class="tag">勞保</p>
-                    <p class="tag">健保</p>
-                    <p class="tag">需穿著員工制服</p>
-                    <p class="tag">需穿著員工制服</p>
-                    <p class="tag">員工生日禮金</p>
-                    <p class="tag">年終獎金</p>
-                    <p class="tag">員工在職教育訓練</p>
+                    <a href="" class="tag">勞保</a>
+                    <a href="" class="tag">健保</a>
+                    <a href="" class="tag">需穿著員工制服</a>
+                    <a href="" class="tag">需穿著員工制服</a>
+                    <a href="" class="tag">員工生日禮金</a>
+                    <a href="" class="tag">年終獎金</a>
+                    <a href="" class="tag">員工在職教育訓練</a>
                 </div>
             </div>
             <div class="card-btn">
-                <button class="btn">
+                <a href="" class="btn">
                     我要應徵
-                </button>
+                </a>
             </div>
         </div>
     </div>
     <div class="card-jobTag">
-        <h4>水電工程師(台北市、新北市)</h4>
+        <h4><a href="">水電工程師(台北市、新北市)</a></h4>
         <div class="content-section">
             <div class="card-content">
                 <div class="job-title">
                     <img src="assets/img/job-card-cover.png" alt="">
-                    <p>隆通工程有限公司</p>
+                    <p><a href="company-story.html">隆通工程有限公司</a></p>
                 </div>
                 <div class="job-content">
                     <ul>
-                        <li>
+                        <a href="">
                             <img src="assets/img/job-card-icon01.png" alt="">
                             <p>台北市南港區</p>
-                        </li>
-                        <li>
+                        </a>
+                        <a href="">
                             <img src="assets/img/job-card-icon02.png" alt="">
                             <p>月薪 33,000~43,000元</p>
-                        </li>
+                        </a>
                     </ul>
                 </div>
                 <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
                 <div class="job-tag"> 
-                    <p class="tag">勞保</p>
-                    <p class="tag">健保</p>
-                    <p class="tag">需穿著員工制服</p>
-                    <p class="tag">需穿著員工制服</p>
-                    <p class="tag">員工生日禮金</p>
-                    <p class="tag">年終獎金</p>
-                    <p class="tag">員工在職教育訓練</p>
+                    <a href="" class="tag">勞保</a>
+                    <a href="" class="tag">健保</a>
+                    <a href="" class="tag">需穿著員工制服</a>
+                    <a href="" class="tag">需穿著員工制服</a>
+                    <a href="" class="tag">員工生日禮金</a>
+                    <a href="" class="tag">年終獎金</a>
+                    <a href="" class="tag">員工在職教育訓練</a>
                 </div>
             </div>
             <div class="card-btn">
-                <button class="btn">
+                <a href="" class="btn">
                     我要應徵
-                </button>
+                </a>
             </div>
         </div>
     </div>
     <div class="card-jobTag">
-        <h4>水電工程師(台北市、新北市)</h4>
+        <h4><a href="">水電工程師(台北市、新北市)</a></h4>
         <div class="content-section">
             <div class="card-content">
                 <div class="job-title">
                     <img src="assets/img/job-card-cover.png" alt="">
-                    <p>隆通工程有限公司</p>
+                    <p><a href="company-story.html">隆通工程有限公司</a></p>
                 </div>
                 <div class="job-content">
                     <ul>
-                        <li>
+                        <a href="">
                             <img src="assets/img/job-card-icon01.png" alt="">
                             <p>台北市南港區</p>
-                        </li>
-                        <li>
+                        </a>
+                        <a href="">
                             <img src="assets/img/job-card-icon02.png" alt="">
                             <p>月薪 33,000~43,000元</p>
-                        </li>
+                        </a>
                     </ul>
                 </div>
                 <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
                 <div class="job-tag"> 
-                    <p class="tag">勞保</p>
-                    <p class="tag">健保</p>
-                    <p class="tag">需穿著員工制服</p>
-                    <p class="tag">需穿著員工制服</p>
-                    <p class="tag">員工生日禮金</p>
-                    <p class="tag">年終獎金</p>
-                    <p class="tag">員工在職教育訓練</p>
+                    <a href="" class="tag">勞保</a>
+                    <a href="" class="tag">健保</a>
+                    <a href="" class="tag">需穿著員工制服</a>
+                    <a href="" class="tag">需穿著員工制服</a>
+                    <a href="" class="tag">員工生日禮金</a>
+                    <a href="" class="tag">年終獎金</a>
+                    <a href="" class="tag">員工在職教育訓練</a>
                 </div>
             </div>
             <div class="card-btn">
-                <button class="btn">
+                <a href="" class="btn">
                     我要應徵
-                </button>
+                </a>
             </div>
         </div>
     </div>
     <div class="card-jobTag">
-        <h4>水電工程師(台北市、新北市)</h4>
+        <h4><a href="">水電工程師(台北市、新北市)</a></h4>
         <div class="content-section">
             <div class="card-content">
                 <div class="job-title">
                     <img src="assets/img/job-card-cover.png" alt="">
-                    <p>隆通工程有限公司</p>
+                    <p><a href="company-story.html">隆通工程有限公司</a></p>
                 </div>
                 <div class="job-content">
                     <ul>
-                        <li>
+                        <a href="">
                             <img src="assets/img/job-card-icon01.png" alt="">
                             <p>台北市南港區</p>
-                        </li>
-                        <li>
+                        </a>
+                        <a href="">
                             <img src="assets/img/job-card-icon02.png" alt="">
                             <p>月薪 33,000~43,000元</p>
-                        </li>
+                        </a>
                     </ul>
                 </div>
                 <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
                 <div class="job-tag"> 
-                    <p class="tag">勞保</p>
-                    <p class="tag">健保</p>
-                    <p class="tag">需穿著員工制服</p>
-                    <p class="tag">需穿著員工制服</p>
-                    <p class="tag">員工生日禮金</p>
-                    <p class="tag">年終獎金</p>
-                    <p class="tag">員工在職教育訓練</p>
+                    <a href="" class="tag">勞保</a>
+                    <a href="" class="tag">健保</a>
+                    <a href="" class="tag">需穿著員工制服</a>
+                    <a href="" class="tag">需穿著員工制服</a>
+                    <a href="" class="tag">員工生日禮金</a>
+                    <a href="" class="tag">年終獎金</a>
+                    <a href="" class="tag">員工在職教育訓練</a>
                 </div>
             </div>
             <div class="card-btn">
-                <button class="btn">
+                <a href="" class="btn">
                     我要應徵
-                </button>
+                </a>
             </div>
         </div>
     </div>
     <div class="card-jobTag">
-        <h4>水電工程師(台北市、新北市)</h4>
+        <h4><a href="">水電工程師(台北市、新北市)</a></h4>
         <div class="content-section">
             <div class="card-content">
                 <div class="job-title">
                     <img src="assets/img/job-card-cover.png" alt="">
-                    <p>隆通工程有限公司</p>
+                    <p><a href="company-story.html">隆通工程有限公司</a></p>
                 </div>
                 <div class="job-content">
                     <ul>
-                        <li>
+                        <a href="">
                             <img src="assets/img/job-card-icon01.png" alt="">
                             <p>台北市南港區</p>
-                        </li>
-                        <li>
+                        </a>
+                        <a href="">
                             <img src="assets/img/job-card-icon02.png" alt="">
                             <p>月薪 33,000~43,000元</p>
-                        </li>
+                        </a>
                     </ul>
                 </div>
                 <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
                 <div class="job-tag"> 
-                    <p class="tag">勞保</p>
-                    <p class="tag">健保</p>
-                    <p class="tag">需穿著員工制服</p>
-                    <p class="tag">需穿著員工制服</p>
-                    <p class="tag">員工生日禮金</p>
-                    <p class="tag">年終獎金</p>
-                    <p class="tag">員工在職教育訓練</p>
+                    <a href="" class="tag">勞保</a>
+                    <a href="" class="tag">健保</a>
+                    <a href="" class="tag">需穿著員工制服</a>
+                    <a href="" class="tag">需穿著員工制服</a>
+                    <a href="" class="tag">員工生日禮金</a>
+                    <a href="" class="tag">年終獎金</a>
+                    <a href="" class="tag">員工在職教育訓練</a>
                 </div>
             </div>
             <div class="card-btn">
-                <button class="btn">
+                <a href="" class="btn">
                     我要應徵
-                </button>
+                </a>
             </div>
         </div>
     </div>
