--- a/src/layout/card-job.html
+++ b/src/layout/card-job.html
@@ -4,27 +4,26 @@
     <div class="card-job">
         <img src="assets/img/job-card-cover.png" alt="">
         <div class="card-content">
-            <div class="job-title">
+            <a class="job-title" href="">
                 <i class="fa-solid fa-heart"></i>
                 <p>職缺名稱</p>
-            </div>
+            </a>
             <div class="job-content">
                 <ul>
-                    <li>
+                    <a href="">
                         <img src="assets/img/job-card-icon01.png" alt="">
                         <p>台北市南港區</p>
-                    </li>
-                    <li>
+                    </a>
+                    <a href="">
                         <img src="assets/img/job-card-icon02.png" alt="">
                         <p>月薪 33,000~43,000元</p>
-                    </li>
+                    </a>
                 </ul>
             </div>
-            <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
             <div class="job-tag"> 
-                <p>友善環境</p>
-                <p>幸福企業</p>
-                <p>幸福企業讚讚</p>
+                <a href="">友善環境</a>
+                <a href="">幸福企業</a>
+                <a href="">幸福企業讚讚</a>
             </div>
         </div>
         <div class="card-office">
@@ -34,28 +33,26 @@
     <div class="card-job">
         <img src="assets/img/job-card-cover.png" alt="">
         <div class="card-content">
-            <div class="job-title">
+            <a class="job-title" href="">
                 <i class="fa-solid fa-heart"></i>
                 <p>職缺名稱</p>
-            </div>
+            </a>
             <div class="job-content">
                 <ul>
-                    <li>
+                    <a href="">
                         <img src="assets/img/job-card-icon01.png" alt="">
                         <p>台北市南港區</p>
-                    </li>
-                    <li>
+                    </a>
+                    <a href="">
                         <img src="assets/img/job-card-icon02.png" alt="">
                         <p>月薪 33,000~43,000元</p>
-                    </li>
+                    </a>
                 </ul>
             </div>
-            <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
             <div class="job-tag"> 
-                <p>友善環境</p>
-                <p>幸福企業</p>
-                <p>幸福企業讚讚</p>
-    
+                <a href="">友善環境</a>
+                <a href="">幸福企業</a>
+                <a href="">幸福企業讚讚</a>
             </div>
         </div>
         <div class="card-office">
@@ -65,28 +62,26 @@
     <div class="card-job">
         <img src="assets/img/job-card-cover.png" alt="">
         <div class="card-content">
-            <div class="job-title">
+            <a class="job-title" href="">
                 <i class="fa-solid fa-heart"></i>
                 <p>職缺名稱</p>
-            </div>
+            </a>
             <div class="job-content">
                 <ul>
-                    <li>
+                    <a href="">
                         <img src="assets/img/job-card-icon01.png" alt="">
                         <p>台北市南港區</p>
-                    </li>
-                    <li>
+                    </a>
+                    <a href="">
                         <img src="assets/img/job-card-icon02.png" alt="">
                         <p>月薪 33,000~43,000元</p>
-                    </li>
+                    </a>
                 </ul>
             </div>
-            <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
             <div class="job-tag"> 
-                <p>友善環境</p>
-                <p>幸福企業</p>
-                <p>幸福企業讚讚</p>
-    
+                <a href="">友善環境</a>
+                <a href="">幸福企業</a>
+                <a href="">幸福企業讚讚</a>
             </div>
         </div>
         <div class="card-office">
@@ -96,28 +91,26 @@
     <div class="card-job">
         <img src="assets/img/job-card-cover.png" alt="">
         <div class="card-content">
-            <div class="job-title">
+            <a class="job-title" href="">
                 <i class="fa-solid fa-heart"></i>
                 <p>職缺名稱</p>
-            </div>
+            </a>
             <div class="job-content">
                 <ul>
-                    <li>
+                    <a href="">
                         <img src="assets/img/job-card-icon01.png" alt="">
                         <p>台北市南港區</p>
-                    </li>
-                    <li>
+                    </a>
+                    <a href="">
                         <img src="assets/img/job-card-icon02.png" alt="">
                         <p>月薪 33,000~43,000元</p>
-                    </li>
+                    </a>
                 </ul>
             </div>
-            <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
             <div class="job-tag"> 
-                <p>友善環境</p>
-                <p>幸福企業</p>
-                <p>幸福企業讚讚</p>
-    
+                <a href="">友善環境</a>
+                <a href="">幸福企業</a>
+                <a href="">幸福企業讚讚</a>
             </div>
         </div>
         <div class="card-office">
@@ -127,28 +120,26 @@
     <div class="card-job">
         <img src="assets/img/job-card-cover.png" alt="">
         <div class="card-content">
-            <div class="job-title">
+            <a class="job-title" href="">
                 <i class="fa-solid fa-heart"></i>
                 <p>職缺名稱</p>
-            </div>
+            </a>
             <div class="job-content">
                 <ul>
-                    <li>
+                    <a href="">
                         <img src="assets/img/job-card-icon01.png" alt="">
                         <p>台北市南港區</p>
-                    </li>
-                    <li>
+                    </a>
+                    <a href="">
                         <img src="assets/img/job-card-icon02.png" alt="">
                         <p>月薪 33,000~43,000元</p>
-                    </li>
+                    </a>
                 </ul>
             </div>
-            <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
             <div class="job-tag"> 
-                <p>友善環境</p>
-                <p>幸福企業</p>
-                <p>幸福企業讚讚</p>
-    
+                <a href="">友善環境</a>
+                <a href="">幸福企業</a>
+                <a href="">幸福企業讚讚</a>
             </div>
         </div>
         <div class="card-office">
@@ -158,28 +149,26 @@
     <div class="card-job">
         <img src="assets/img/job-card-cover.png" alt="">
         <div class="card-content">
-            <div class="job-title">
+            <a class="job-title" href="">
                 <i class="fa-solid fa-heart"></i>
                 <p>職缺名稱</p>
-            </div>
+            </a>
             <div class="job-content">
                 <ul>
-                    <li>
+                    <a href="">
                         <img src="assets/img/job-card-icon01.png" alt="">
                         <p>台北市南港區</p>
-                    </li>
-                    <li>
+                    </a>
+                    <a href="">
                         <img src="assets/img/job-card-icon02.png" alt="">
                         <p>月薪 33,000~43,000元</p>
-                    </li>
+                    </a>
                 </ul>
             </div>
-            <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
             <div class="job-tag"> 
-                <p>友善環境</p>
-                <p>幸福企業</p>
-                <p>幸福企業讚讚</p>
-    
+                <a href="">友善環境</a>
+                <a href="">幸福企業</a>
+                <a href="">幸福企業讚讚</a>
             </div>
         </div>
         <div class="card-office">
@@ -189,28 +178,26 @@
     <div class="card-job">
         <img src="assets/img/job-card-cover.png" alt="">
         <div class="card-content">
-            <div class="job-title">
+            <a class="job-title" href="">
                 <i class="fa-solid fa-heart"></i>
                 <p>職缺名稱</p>
-            </div>
+            </a>
             <div class="job-content">
                 <ul>
-                    <li>
+                    <a href="">
                         <img src="assets/img/job-card-icon01.png" alt="">
                         <p>台北市南港區</p>
-                    </li>
-                    <li>
+                    </a>
+                    <a href="">
                         <img src="assets/img/job-card-icon02.png" alt="">
                         <p>月薪 33,000~43,000元</p>
-                    </li>
+                    </a>
                 </ul>
             </div>
-            <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
             <div class="job-tag"> 
-                <p>友善環境</p>
-                <p>幸福企業</p>
-                <p>幸福企業讚讚</p>
-    
+                <a href="">友善環境</a>
+                <a href="">幸福企業</a>
+                <a href="">幸福企業讚讚</a>
             </div>
         </div>
         <div class="card-office">
@@ -220,28 +207,26 @@
     <div class="card-job">
         <img src="assets/img/job-card-cover.png" alt="">
         <div class="card-content">
-            <div class="job-title">
+            <a class="job-title" href="">
                 <i class="fa-solid fa-heart"></i>
                 <p>職缺名稱</p>
-            </div>
+            </a>
             <div class="job-content">
                 <ul>
-                    <li>
+                    <a href="">
                         <img src="assets/img/job-card-icon01.png" alt="">
                         <p>台北市南港區</p>
-                    </li>
-                    <li>
+                    </a>
+                    <a href="">
                         <img src="assets/img/job-card-icon02.png" alt="">
                         <p>月薪 33,000~43,000元</p>
-                    </li>
+                    </a>
                 </ul>
             </div>
-            <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
             <div class="job-tag"> 
-                <p>友善環境</p>
-                <p>幸福企業</p>
-                <p>幸福企業讚讚</p>
-    
+                <a href="">友善環境</a>
+                <a href="">幸福企業</a>
+                <a href="">幸福企業讚讚</a>
             </div>
         </div>
         <div class="card-office">
@@ -258,27 +243,26 @@
             <div class="card-job">
             <img src="assets/img/job-card-cover.png" alt="">
             <div class="card-content">
-                <div class="job-title">
+                <a class="job-title">
                     <i class="fa-solid fa-heart"></i>
                     <p>職缺名稱</p>
-                </div>
+                </a>
                 <div class="job-content">
                     <ul>
-                        <li>
+                        <a href="">
                             <img src="assets/img/job-card-icon01.png" alt="">
                             <p class="p2">台北市南港區</p>
-                        </li>
-                        <li>
+                        </a>
+                        <a href="">
                             <img src="assets/img/job-card-icon02.png" alt="">
                             <p class="p2">月薪 33,000~43,000元</p>
-                        </li>
+                        </a>
                     </ul>
                 </div>
-                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
                 <div class="job-tag"> 
-                    <p class="tag">友善環境</p>
-                    <p class="tag">幸福企業</p>
-                    <p class="tag">幸福企業讚讚</p>
+                    <a href="" class="tag">友善環境</a>
+                    <a href="" class="tag">幸福企業</a>
+                    <a href="" class="tag">幸福企業讚讚</a>
         
                 </div>
             </div>
@@ -291,27 +275,26 @@
             <div class="card-job">
             <img src="assets/img/job-card-cover.png" alt="">
             <div class="card-content">
-                <div class="job-title">
+                <a class="job-title">
                     <i class="fa-solid fa-heart"></i>
                     <p>職缺名稱</p>
-                </div>
+                </a>
                 <div class="job-content">
                     <ul>
-                        <li>
+                        <a href="">
                             <img src="assets/img/job-card-icon01.png" alt="">
                             <p class="p2">台北市南港區</p>
-                        </li>
-                        <li>
+                        </a>
+                        <a href="">
                             <img src="assets/img/job-card-icon02.png" alt="">
                             <p class="p2">月薪 33,000~43,000元</p>
-                        </li>
+                        </a>
                     </ul>
                 </div>
-                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
                 <div class="job-tag"> 
-                    <p class="tag">友善環境</p>
-                    <p class="tag">幸福企業</p>
-                    <p class="tag">幸福企業讚讚</p>
+                    <a href="" class="tag">友善環境</a>
+                    <a href="" class="tag">幸福企業</a>
+                    <a href="" class="tag">幸福企業讚讚</a>
         
                 </div>
             </div>
@@ -324,27 +307,26 @@
             <div class="card-job">
             <img src="assets/img/job-card-cover.png" alt="">
             <div class="card-content">
-                <div class="job-title">
+                <a class="job-title">
                     <i class="fa-solid fa-heart"></i>
                     <p>職缺名稱</p>
-                </div>
+                </a>
                 <div class="job-content">
                     <ul>
-                        <li>
+                        <a href="">
                             <img src="assets/img/job-card-icon01.png" alt="">
                             <p class="p2">台北市南港區</p>
-                        </li>
-                        <li>
+                        </a>
+                        <a href="">
                             <img src="assets/img/job-card-icon02.png" alt="">
                             <p class="p2">月薪 33,000~43,000元</p>
-                        </li>
+                        </a>
                     </ul>
                 </div>
-                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
                 <div class="job-tag"> 
-                    <p class="tag">友善環境</p>
-                    <p class="tag">幸福企業</p>
-                    <p class="tag">幸福企業讚讚</p>
+                    <a href="" class="tag">友善環境</a>
+                    <a href="" class="tag">幸福企業</a>
+                    <a href="" class="tag">幸福企業讚讚</a>
         
                 </div>
             </div>
@@ -357,27 +339,26 @@
             <div class="card-job">
             <img src="assets/img/job-card-cover.png" alt="">
             <div class="card-content">
-                <div class="job-title">
+                <a class="job-title">
                     <i class="fa-solid fa-heart"></i>
                     <p>職缺名稱</p>
-                </div>
+                </a>
                 <div class="job-content">
                     <ul>
-                        <li>
+                        <a href="">
                             <img src="assets/img/job-card-icon01.png" alt="">
                             <p class="p2">台北市南港區</p>
-                        </li>
-                        <li>
+                        </a>
+                        <a href="">
                             <img src="assets/img/job-card-icon02.png" alt="">
                             <p class="p2">月薪 33,000~43,000元</p>
-                        </li>
+                        </a>
                     </ul>
                 </div>
-                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
                 <div class="job-tag"> 
-                    <p class="tag">友善環境</p>
-                    <p class="tag">幸福企業</p>
-                    <p class="tag">幸福企業讚讚</p>
+                    <a href="" class="tag">友善環境</a>
+                    <a href="" class="tag">幸福企業</a>
+                    <a href="" class="tag">幸福企業讚讚</a>
         
                 </div>
             </div>
@@ -390,27 +371,90 @@
             <div class="card-job">
             <img src="assets/img/job-card-cover.png" alt="">
             <div class="card-content">
-                <div class="job-title">
+                <a class="job-title">
                     <i class="fa-solid fa-heart"></i>
                     <p>職缺名稱</p>
-                </div>
+                </a>
                 <div class="job-content">
                     <ul>
-                        <li>
+                        <a href="">
                             <img src="assets/img/job-card-icon01.png" alt="">
                             <p class="p2">台北市南港區</p>
-                        </li>
-                        <li>
+                        </a>
+                        <a href="">
                             <img src="assets/img/job-card-icon02.png" alt="">
                             <p class="p2">月薪 33,000~43,000元</p>
-                        </li>
+                        </a>
                     </ul>
                 </div>
-                <!-- 職缺標籤:會自動換行，超過三行即不顯示 -->
                 <div class="job-tag"> 
-                    <p class="tag">友善環境</p>
-                    <p class="tag">幸福企業</p>
-                    <p class="tag">幸福企業讚讚</p>
+                    <a href="" class="tag">友善環境</a>
+                    <a href="" class="tag">幸福企業</a>
+                    <a href="" class="tag">幸福企業讚讚</a>
+        
+                </div>
+            </div>
+            <div class="card-office">
+                <p>台灣艾司摩爾科技股份有限公司</p>
+            </div>
+            </div>
+        </div>
+        <div class="swiper-slide">    
+            <div class="card-job">
+            <img src="assets/img/job-card-cover.png" alt="">
+            <div class="card-content">
+                <a class="job-title">
+                    <i class="fa-solid fa-heart"></i>
+                    <p>職缺名稱</p>
+                </a>
+                <div class="job-content">
+                    <ul>
+                        <a href="">
+                            <img src="assets/img/job-card-icon01.png" alt="">
+                            <p class="p2">台北市南港區</p>
+                        </a>
+                        <a href="">
+                            <img src="assets/img/job-card-icon02.png" alt="">
+                            <p class="p2">月薪 33,000~43,000元</p>
+                        </a>
+                    </ul>
+                </div>
+                <div class="job-tag"> 
+                    <a href="" class="tag">友善環境</a>
+                    <a href="" class="tag">幸福企業</a>
+                    <a href="" class="tag">幸福企業讚讚</a>
+        
+                </div>
+            </div>
+            <div class="card-office">
+                <p>台灣艾司摩爾科技股份有限公司</p>
+            </div>
+            </div>
+        </div>
+        <div class="swiper-slide">    
+            <div class="card-job">
+            <img src="assets/img/job-card-cover.png" alt="">
+            <div class="card-content">
+                <a class="job-title">
+                    <i class="fa-solid fa-heart"></i>
+                    <p>職缺名稱</p>
+                </a>
+                <div class="job-content">
+                    <ul>
+                        <a href="">
+                            <img src="assets/img/job-card-icon01.png" alt="">
+                            <p class="p2">台北市南港區</p>
+                        </a>
+                        <a href="">
+                            <img src="assets/img/job-card-icon02.png" alt="">
+                            <p class="p2">月薪 33,000~43,000元</p>
+                        </a>
+                    </ul>
+                </div>
+                <div class="job-tag"> 
+                    <a href="" class="tag">友善環境</a>
+                    <a href="" class="tag">幸福企業</a>
+                    <a href="" class="tag">幸福企業讚讚</a>
         
                 </div>
             </div>
