--- a/src/sass/layout/_card-company-tag.scss
+++ b/src/sass/layout/_card-company-tag.scss
@@ -26,8 +26,7 @@
         // max-width: 300px;
     
         @include flex($d:column);
-        @extend %pointer;
-    
+
         >img{
             // @include mentor-img(300px);
             width: 100%;
@@ -56,7 +55,7 @@
                     >ul{
                         @include flex($d:column);
                         gap:8px;
-                        li{
+                        a{
                             @include flex($a-i:center);
                             gap: 8px;
                         }
