--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -207,12 +207,11 @@ p,
     @include flex($w: wrap);
     gap: 8px;
 
-    >p {
+    >a {
         @extend %dib;
-        @extend %pointer;
         font-size: $tag;
         color: $c-secondary;
-        padding: 4px 10px;
+        padding: 6px 10px;
         border: 1px solid $c-secondary;
         border-radius: 8px;
 
@@ -360,6 +359,10 @@ textarea {
     @include flex($j-c: center);
     gap: 100px;
 
+    @include mobile{
+        gap: 40px;
+    }
+
     .tabFocus {
         color: $c-primary;
         padding: 8px;
@@ -386,7 +389,7 @@ textarea {
         @extend %bb;
         @extend %pointer;
         width: 100%;
-        max-width: 140px;
+        min-width: 140px;
         height: 47px;
         color: $c-gray;
         border-radius: 8px;
@@ -402,11 +405,11 @@ textarea {
         border-color: #666;
 
         @include mini-pad {
-            max-width: 400px;
+            min-width: none;
         }
 
         @include mobile {
-            max-width: 280px;
+            min-width: none;
         }
     }
 }
